# MirrorOnTheWall

./: .gitignore  LICENSE  README.md  index.html  params.json
cauldronsMirror/: CMakeLists.txt  main.cpp
cauldronsMirror/include/: GlobalVariables.h  GroggyDetector.h
cauldronsMirror/src/: GroggyDetector.cpp
